<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dip"
    android:background="@color/app_bg"
    android:orientation="vertical"
    android:padding="10dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/name"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="0dip"
            android:layout_height="35dip"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dip"
            android:layout_weight="8"
            android:background="@drawable/input_bg"
            android:paddingLeft="3dip"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/longitude"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/longitude"
            android:layout_width="0dip"
            android:layout_height="35dip"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dip"
            android:layout_weight="8"
            android:background="@drawable/input_bg"
            android:focusable="false"
            android:paddingLeft="3dip"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/latitude"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/latitude"
            android:layout_width="0dip"
            android:layout_height="35dip"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dip"
            android:layout_weight="8"
            android:background="@drawable/input_bg"
            android:focusable="false"
            android:paddingLeft="3dip"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal"
        android:padding="20dip" >

        <Button
            android:id="@+id/get_info"
            android:layout_width="0dip"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:text="@string/get_info"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/save_info"
            android:layout_width="0dip"
            android:layout_height="40dip"
            android:layout_marginLeft="20dip"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:text="@string/save_info"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <com.baidu.mapapi.map.MapView
        android:id="@+id/bmapView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true" />

</LinearLayout>