<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="12dip"
        android:layout_marginRight="12dip"
        android:gravity="center" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialogbg"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dip" >

            <RelativeLayout
                android:id="@+id/title_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dip"
                android:layout_marginRight="7dip" >

                <TextView
                    android:id="@+id/title_text"
                    style="@style/text_black_18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/route_search_title" />

                <LinearLayout
                    android:id="@+id/close_img"
                    android:layout_width="60dip"
                    android:layout_height="40dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/close" />
                </LinearLayout>
            </RelativeLayout>

            <ImageView
                android:id="@+id/divide_img"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_layout"
                android:src="@drawable/list_drive_line" />

            <LinearLayout
                android:id="@+id/condLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divide_img"
                android:layout_marginLeft="7dip"
                android:layout_marginRight="7dip"
                android:layout_marginTop="7dip"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/abc_input" >

                    <TextView
                        android:id="@+id/txt1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="3dip"
                        android:text="起点："
                        android:textColor="#999999" />

                    <EditText
                        android:id="@+id/from_txt"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="7dip"
                        android:layout_toRightOf="@+id/txt1"
                        android:background="@null"
                        android:focusable="false"
                        android:gravity="center_vertical"
                        android:text="我的位置"
                        android:textColor="#1684ca"
                        android:textColorHint="#1684ca" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/abc_input"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/txt2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="3dip"
                        android:text="终点："
                        android:textColor="#999999" />

                    <EditText
                        android:id="@+id/to_txt"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="7dip"
                        android:layout_toRightOf="@+id/txt2"
                        android:background="@null"
                        android:editable="false"
                        android:focusable="false"
                        android:gravity="center_vertical"
                        android:hint="点击地图选择"
                        android:textColor="#1684ca"
                        android:textColorHint="#1684ca" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/condLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dip"
                android:baselineAligned="true"
                android:gravity="center"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="15dip" >

                    <Button
                        android:id="@+id/search_bus_btn"
                        style="@style/text_white_18sp"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_selector"
                        android:drawableLeft="@drawable/bus"
                        android:paddingLeft="10dip"
                        android:text="@string/route_search_bus" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="15dip" >

                    <Button
                        android:id="@+id/search_walk_btn"
                        style="@style/text_white_18sp"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_selector"
                        android:drawableLeft="@drawable/walking_man"
                        android:paddingLeft="10dip"
                        android:text="@string/route_search_walk" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/qi_dian_list_layout"
        android:layout_width="165dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="102dip"
        android:layout_marginTop="44dip"
        android:background="#fffffc"
        android:visibility="gone" >

        <ListView
            android:id="@+id/list_view_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cacheColorHint="#00000000"
            android:divider="#CCCCCC"
            android:dividerHeight="1dip"
            android:fadingEdge="none" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/zhong_dian_list_layout"
        android:layout_width="165dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="102dip"
        android:layout_marginTop="82dip"
        android:background="#fffffc"
        android:visibility="gone" >

        <ListView
            android:id="@+id/list_view_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cacheColorHint="#00000000"
            android:divider="#CCCCCC"
            android:dividerHeight="1dip"
            android:fadingEdge="none" />
    </RelativeLayout>

</RelativeLayout>